Add multiple selected directories and ignore individual files with unsupported extensions.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -55,7 +55,7 @@
   </action>
   <action name="actionAddFile">
    <property name="text">
-    <string>Add File...</string>
+    <string>Add Files...</string>
    </property>
   </action>
   <action name="actionAddDirectory">
