Enable multi-selection in the directory list.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,7 +16,11 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <widget class="QTreeView" name="dirsTreeView"/>
+     <widget class="QTreeView" name="dirsTreeView">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
