--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,6 +22,9 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QListView" name="samplesListView"/>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
