--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QListView" name="samplesListView"/>
+     <widget class="QTreeView" name="samplesTreeView"/>
     </item>
    </layout>
   </widget>
