Adding a deselectable tree model so we can add tags with no parent.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,11 @@
      </widget>
     </item>
     <item>
-     <widget class="QTreeView" name="tagsTreeView"/>
+     <widget class="QTreeView" name="tagsTreeView">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
+     </widget>
     </item>
     <item>
      <widget class="QTreeView" name="samplesTreeView"/>
