--- a/edit_tags_dialog.ui
+++ b/edit_tags_dialog.ui
@@ -29,7 +29,7 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QTreeView" name="treeView">
+  <widget class="DeselectableTreeView" name="treeView">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -38,8 +38,18 @@
      <height>251</height>
     </rect>
    </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::SingleSelection</enum>
+   </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>DeselectableTreeView</class>
+   <extends>QTreeView</extends>
+   <header>deselectable_tree_view.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
