--- a/add_tag_dialog.ui
+++ b/add_tag_dialog.ui
@@ -1,61 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>EditTagsDialog</class>
- <widget class="QDialog" name="EditTagsDialog">
+ <class>AddTagDialog</class>
+ <widget class="QDialog" name="AddTagDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>178</width>
+    <height>65</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Edit Tags</string>
+   <string>Add Tag</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>310</x>
-     <y>10</y>
-     <width>81</width>
-     <height>281</height>
+     <x>10</x>
+     <y>30</y>
+     <width>161</width>
+     <height>32</height>
     </rect>
    </property>
    <property name="orientation">
-    <enum>Qt::Vertical</enum>
+    <enum>Qt::Horizontal</enum>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Close</set>
+    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="DeselectableTreeView" name="treeView">
+  <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>291</width>
-     <height>281</height>
+     <width>161</width>
+     <height>20</height>
     </rect>
-   </property>
-   <property name="selectionMode">
-    <enum>QAbstractItemView::SingleSelection</enum>
    </property>
   </widget>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>DeselectableTreeView</class>
-   <extends>QTreeView</extends>
-   <header>deselectable_tree_view.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>EditTagsDialog</receiver>
+   <receiver>AddTagDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -71,7 +61,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>EditTagsDialog</receiver>
+   <receiver>AddTagDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
