Select tags when sample selected, but bug where moving to another sample changes the tag selection which then removes them.

--- a/main_window.ui
+++ b/main_window.ui
@@ -40,7 +40,7 @@
        <item>
         <widget class="QTreeView" name="tagsTreeView">
          <property name="selectionMode">
-          <enum>QAbstractItemView::ExtendedSelection</enum>
+          <enum>QAbstractItemView::MultiSelection</enum>
          </property>
         </widget>
        </item>
