Proper datachanged message when sample renamed so sorting works properly if dynamic sorting enabled.

--- a/main_window.ui
+++ b/main_window.ui
@@ -219,7 +219,7 @@
     </property>
     <widget class="QMenu" name="menuRate">
      <property name="title">
-      <string>Set Rating</string>
+      <string>Set Sample Rating</string>
      </property>
      <addaction name="actionUnrated"/>
      <addaction name="actionRate_10"/>
